# rust-raw-video-player

./: .gitignore  Cargo.toml  flake.nix
src/: error.rs  lib.rs  utils.rs
src/player/: mod.rs  renderer.rs
